--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -14,13 +14,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :resume_link %><br />
-    <%= f.text_field :resume_link, autofocus: true %>
+    <%= f.label :summary %><br />
+    <%= f.text_area :summary, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :summary %><br />
-    <%= f.text_field :summary, autofocus: true %>
+    <%= f.label :resume %><br />
+    <%= f.file_field :resume %>
   </div>
 
   <div class="field">
