--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_with(model: company, local: true) do |form| %>
   <% if company.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(company.errors.count, "error") %> prohibited this company from being saved:</h2>
-
+      <p><%= pluralize(company.errors.count, "error") %> prohibited this company from being saved:</p>
       <ul>
         <% company.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -14,21 +13,6 @@
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :createdAt %>
-    <%= form.datetime_select :createdAt %>
-  </div>
-
-  <div class="field">
-    <%= form.label :modifiedAt %>
-    <%= form.datetime_select :modifiedAt %>
-  </div>
-
-  <div class="field">
-    <%= form.label :deletedAt %>
-    <%= form.datetime_select :deletedAt %>
   </div>
 
   <div class="actions">
