--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Company</h1>
+<h1>Register a Company</h1>
 
 <%= render 'form', company: @company %>
 
-<%= link_to 'Back', companies_path %>
+<%= link_to '<button type="button">See All Registered Companys</button>'.html_safe, companies_path %>
+
+<%= link_to '<button type="button">Logout</button>'.html_safe, destroy_admin_session_path %>
+
