add search bar to searching companies and somewhat functional back buttons

--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -26,5 +26,7 @@
   </div>
 <% end %>
 
-<%= render "admins/shared/links" %> <%= link_to '<button type="button">back</button>'.html_safe, new_user_session_path %>
+<%= render "admins/shared/links" %> 
+<%= link_to 'Back', url_for(:back) %>
+
 
