--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -6,3 +6,4 @@
 
 <%= link_to '<button type="button">Logout</button>'.html_safe, destroy_admin_session_path %>
 
+<%= link_to 'Back', url_for(:back) %>
