--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -33,6 +33,9 @@
   </div>
 <% end %>
 
+<h3>Search for a Company</h3>
+<%= link_to '<button type="button">Search</button>'.html_safe, companies_path %>
+
 <h3>Logout</h3>
 <%= link_to '<button type="button">Logout</button>'.html_safe, destroy_user_session_path %>
 
