--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -19,9 +19,10 @@
     <% @companies.each do |company| %>
       <tr>
         <td><%= company.name %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= raw(company.qr_code) %></td>
+        <td><%= button_to 'Show', company, method: "get" %></td>
+        <td><%= button_to 'Edit', edit_company_path(company), method: "get" %></td>
+        <td><%= button_to 'Destroy', company, method: "delete", data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
