--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,3 +1,5 @@
+<%# This page will be used for showing information about the company %>
+
 <h1>Editing Company</h1>
 
 <%= render 'form', company: @company %>
