--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -5,5 +5,6 @@
   <%= @company.name %>
 </p>
 
+<%= link_to 'Apply', apply_company_path(@company), method: "patch" %> |
 <%= link_to 'Edit', edit_company_path(@company) %> |
 <%= link_to 'Back', companies_path %>
