--- a/app/views/users/registrations/index.html.erb
+++ b/app/views/users/registrations/index.html.erb
@@ -1,8 +1,15 @@
-<h2>Welcome to Job IO</h2>
+<div class="hero-wrap js-fullheight img" style="background-image: url(https://technext.github.io/ignite/images/bg_1.jpg);">
+<div class="overlay"></div>
+<div class="container-fluid px-0">
+<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-center">
+    <div class="col-md-8 text-center d-flex align-items-center ftco-animate js-fullheight">
+        <div class="text mt-5">
+        <h1 class="mb-3">Job IO</h1>
+        <p>Making Job Searching and Career Fairs Easier</p>
+        <p><a href="#" class="btn btn-secondary px-4 py-3">Get Started Now</a></p>
+        </div>
+    </div>
+    </div>
+</div>
+</div>
 
-<h3> Want to Apply for Jobs? </h3>
-<%= link_to '<button type="button">User Login or Sign up!</button>'.html_safe, new_user_session_path %>
-
-
-<h3> Want to View or Create Company Profiles </h3>
-<%= link_to '<button type="button">Admin Login or Sign up!</button>'.html_safe, new_admin_registration_path %>
