--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -24,9 +24,14 @@
                 <%= f.text_area :summary, autofocus: true %>
               </div>
 
+              <%# <div class="form-group col-xs-4"> %>
+              <%#   <%= f.label :resume %1><br /> %>
+              <%#   <%= f.file_field :resume %1> %>
+              <%# </div> %>
+
               <div class="form-group col-xs-4">
                 <%= f.label :resume %><br />
-                <%= f.file_field :resume %>
+                <a href = "<%= @user.resume %>" target="_blank">Resume Link</a>
               </div>
 
               <div class="form-group col-xs-6">
