fixed update bug

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -47,7 +47,8 @@
               </div>
             <% end %>
 
-            <div class="form-group">  
+            
+            <div class="bg-light p-5 contact-form">  
             <h3>Search for a Company</h3>
             <%= link_to '<button type="button">Search</button>'.html_safe, companies_path %>
 
