--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -15,6 +15,11 @@
     <%= form.text_field :name %>
   </div>
 
+  <div class="form-group">    
+    <%= form.label :summary %>
+    <%= form.text_field :summary %>
+  </div>
+
   <div class="form-group">
     <%= form.submit %>
   </div>
