--- a/app/views/companies/home.html.erb
+++ b/app/views/companies/home.html.erb
@@ -6,17 +6,35 @@
         <div class="text mt-5">
             <% if admin_signed_in? %>  
               <% if current_admin.company_id %>
-                <h1><%= Company.find(current_admin.company_id).name %></h1>
+                <% c = Company.find(current_admin.company_id) %>
+                <h1><%= c.name %></h1>
                 <div class="bg-light p-5 contact-form">
                   <div class="form-group">
                     <h2>Your QR Code</h2>
                   </div>
                   <div class="form-group">
-                    <%= raw(Company.find(current_admin.company_id).qr_code) %>
+                    <%= raw(c.qr_code) %>
                   </div>
                   <div class="form-group">
-                    <%= link_to '<button type="button">Logout</button>'.html_safe, destroy_admin_session_path %>
-                    <p>Unhappy? <%= button_to "Cancel my account", registration_path(:admin), data: { confirm: "Are you sure?" }, method: :delete %></p>
+                    <h2><%= c.summary %></h2>
+                  </div>
+                  <div class="form-group">
+                      <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">View Applicants</th>
+                          <th scope="col">Logout</th>
+                          <th scope="col">Cancel Account</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td><%= button_to "View Applicants", admin_users_path, method: :get %></td>
+                          <td><%= link_to '<button type="button">Logout</button>'.html_safe, destroy_admin_session_path %></td>
+                          <td><%= button_to "Cancel my account", registration_path(:admin), data: { confirm: "Are you sure?" }, method: :delete %></td>
+                        </tr>
+                      </tbody>
+                    </table>
                   </div>
                 </div>
               <%# if the user hasn't created a company yet, redirect them to the create a company %>
