--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -40,7 +40,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><%= button_to 'Apply', apply_company_path(@company), method: "patch" %></td>
+              <td><%= button_to 'Apply', companies_path(@company), method: "patch" %></td>
             </tr>
           </tbody>
         </table>
