--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -9,6 +9,7 @@
           <h1>Search Companies</h1>
           <div class="bg-light p-5 contact-form">
           <div class="table-responsive">
+          <%= cache @companies do %>
           <table class="table">
             <thead>
               <tr>
@@ -24,17 +25,22 @@
               <% end %>
 
               <% @companies.each do |company| %>
+              <%# Russian doll caching for performance %>
+                <% cache company do %>
                 <tr>
                   <td><%= company.name %></td>
                   <td><%= button_to 'Show', info_company_path(company), method: "get" %></td>
                 </tr>
+                <% end %>
               <% end %>
             </tbody>
           </table>
+          <%= will_paginate @companies %>
           </div>
           <br>
 
           <%= link_to 'Back', edit_user_registration_path %>
+          <% end %>
           </div>
           </div>
         </div>
