--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -44,7 +44,10 @@
           <%# </div> %>
           <div class="form-group"> 
             <%= f.label :resume %>
-            <%= f.file_field :resume %>
+            <br>
+            <div class="content">
+              <%= f.file_field :resume %>
+            </div>
           </div>
 
           <div class="form-group">
