--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -8,7 +8,7 @@
 
           <h1>Search Companies</h1>
           <div class="bg-light p-5 contact-form">
-          <div class="table-responsive">
+          <div class="table-responsive" style="overflow: scroll; height:350px">
           <%= cache @companies do %>
           <table class="table">
             <thead>
