--- a/app/views/companies/info.html.erb
+++ b/app/views/companies/info.html.erb
@@ -8,7 +8,7 @@
         <div class="form-group">
           <h1 class="text-primary"><%= @company.name %></h1>
         </div>
-        <table class="table">
+        <table class="table" style="width: 1100px">
         <thead>
           <tr>
             <th scope="col">Summary</th>
