--- a/app/views/companies/apply.html.erb
+++ b/app/views/companies/apply.html.erb
@@ -6,40 +6,7 @@
         <div class="text mt-5">
           <p id="notice"><%= notice %></p>
           <h1>Your application was successful!</h1>
-          <h2><font color = "white">Search Companies</font></h2>
-          <div class="bg-light p-5 contact-form">
-          <div class="table-responsive">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Show Company Info</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <%= form_tag(companies_path, method: :get) do |f| %>
-                <%= text_field_tag(:search, params[:search]) %>
-                <%= submit_tag ("Search") %>
-              <% end %>
-              <%= cache @companies do %>
-              <% @companies = Company.all %>
-              <% @companies.each do |company| %>
-                <%= cache company do %>
-                <tr>
-                  <td><%= company.name %></td>
-                  <td><%= button_to 'Show', info_company_path(company), method: "get" %></td>
-                </tr>
-                <% end %>
-              <% end %>
-              <% end %>
-            </tbody>
-          </table>
-          </div>
-
-          <br>
-
-          <%= link_to 'Back', edit_user_registration_path %>
+          <%= button_to 'User Profile', edit_user_registration_path, method: :get %>
           </div>
           </div>
         </div>
