--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -8,7 +8,7 @@
         <div class="form-group">
           <h1 class="text-primary"><%= @company.name %></h1>
         </div>
-        <table class="table">
+        <table class="table" style="width: 1100px">
         <thead>
           <tr>
             <th scope="col">Summary</th>
@@ -40,7 +40,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><%= button_to 'Apply', companies_path(@company), method: "patch" %></td>
+              <td><%= button_to 'Apply', apply_company_path(@company), method: "patch" %></td>
             </tr>
           </tbody>
         </table>
