--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
         <div class="col-md">
         <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Job IO</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p>Making career fairs easier for you and your dream job.</p>
             <ul class="ftco-footer-social list-unstyled mb-0">
             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -73,39 +73,13 @@
         </div>
         </div>
         <div class="col-md">
-        <div class="ftco-footer-widget mb-4 ml-md-5">
-            <h2 class="ftco-heading-2">Unseful Links</h2>
-            <ul class="list-unstyled">
-            <li><a href="#" class="py-2 d-block">Servers</a></li>
-            <li><a href="#" class="py-2 d-block">Windos Hosting</a></li>
-            <li><a href="#" class="py-2 d-block">Cloud Hosting</a></li>
-            <li><a href="#" class="py-2 d-block">OS Servers</a></li>
-            <li><a href="#" class="py-2 d-block">Linux Servers</a></li>
-            <li><a href="#" class="py-2 d-block">Policy</a></li>
-            </ul>
-        </div>
-        </div>
-        <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Navigational</h2>
-            <ul class="list-unstyled">
-            <li><a href="#" class="py-2 d-block">Home</a></li>
-            <li><a href="#" class="py-2 d-block">Domain</a></li>
-            <li><a href="#" class="py-2 d-block">Hosting</a></li>
-            <li><a href="#" class="py-2 d-block">About</a></li>
-            <li><a href="#" class="py-2 d-block">Blog</a></li>
-            <li><a href="#" class="py-2 d-block">Contact</a></li>
-            </ul>
-        </div>
-        </div>
-        <div class="col-md">
         <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Office</h2>
             <div class="block-23 mb-3">
                 <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">University of California, Los Angeles</span></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">(555) 555-5555</span></a></li>
+                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">jobio@jobio.com</span></a></li>
                 </ul>
             </div>
         </div>
